Adição das informações de oficinas e home no banco de dados

--- a/telas_finais/login.html
+++ b/telas_finais/login.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label label">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+                        <input type="email" class="form-control" id="login" placeholder="Digite seu email">
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label label">Senha</label>
