--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -121,9 +121,7 @@
         <div class="container-fluid container_descricao">
             <div class="row align-items-center justify-content-center row_descricao p-4 ">
                 <div class="col-sm-12 col-md-10 col-lg-10 col-xl-6 text-center col_texto_descricao justify-content-center">
-                    <p class="texto_descricao text-center" id="texto1">
-                        Com uma variedade de materiais coloridos e ferramentas divertidas, nossas oficinas proporcionam um ambiente estimulante e acolhedor para que as crianças possam se expressar livremente. Valorizamos a diversidade de ideias e incentivamos a experimentação, sempre celebrando a singularidade de cada pequeno artista. Aqui, o aprendizado acontece de forma lúdica e significativa, promovendo o desenvolvimento criativo e emocional de forma encantadora.
-                    </p>
+                    <p class="texto_descricao text-center" id="texto1"></p>
                     <a class="btn btn-light botao_oficinas text-center" href="#ofc"> Descubra as Oficinas</a>
                 </div>
             </div>
@@ -145,7 +143,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img1" class="card-img round">                            
+                                <img id="imagem1" class="card-img round">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -157,7 +155,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img2" class="card-img ">                            
+                                <img id="imagem2" class="card-img ">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -169,7 +167,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img3" class="card-img">                            
+                                <img  id="imagem3" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -181,7 +179,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img   id="img4" class="card-img">                            
+                                <img   id="imagem4" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -193,7 +191,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img5" class="card-img">                            
+                                <img  id="imagem5" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -205,7 +203,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img   id="img6" class="card-img">                            
+                                <img   id="imagem6" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -217,7 +215,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img7" class="card-img">                            
+                                <img  id="imagem7" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -229,7 +227,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img  id="img8" class="card-img">                            
+                                <img  id="imagem8" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -241,7 +239,7 @@
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <div class="card-image">
-                                <img id="img9" class="card-img">                            
+                                <img id="imagem9" class="card-img">                            
                             </div>
                         </div>
                         <div class="card-content">
@@ -261,7 +259,7 @@
 
     
     
-    <br><br><br><br><br>
+    <br><br><br><button class="btn btn-outline-success w-100 d-none" id="botaoCadastro" onclick="salvarMudancas()">Salvar Mudanças</button><br><br>
     <footer class="fixed">
         <div class="container-fluid rodape">
             <div class="row justify-content-around align-items-center row_rodape g-3">
