--- a/telas_finais/tela_admin.html
+++ b/telas_finais/tela_admin.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="teste()">
 
     <header>
         <nav class="navbar navbar-expand-lg fixed">
