--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/oficinas.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="css/modal.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/swiper-bundle.min.css">
 
