--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/eventos.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="css/modal.css">
  
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
