--- a/telas_finais/saude.html
+++ b/telas_finais/saude.html
@@ -54,7 +54,7 @@
                   <div class="offcanvas-body">
                       <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
                           <li class="nav-item  navegacao_item">
-                              <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
+                              <a class="nav-link  navegacao_link" aria-current="page" href="home.html">Home</a>
                           </li>
                           <li class="nav-item navegacao_item">
                               <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
@@ -63,7 +63,7 @@
                               <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
                           </li>
                           <li class="nav-item navegacao_item">
-                              <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
+                              <a class="nav-link navegacao_link active" href="saude.html">Saúde e Bem-Estar</a>
                           </li>
                           <li class="nav-item navegacao_item">
                               <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
