--- a/telas_finais/telas_eventos_sociais/aniversario_tematico.html
+++ b/telas_finais/telas_eventos_sociais/aniversario_tematico.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Aniversário Temático</h1>
+                <h1 class="text-center pt-5">Aniversário Temático</h1>
                 <p class="text-center">Transforme o seu aniversário em um evento inesquecível! Oferecemos festas personalizadas, repletas de diversão, alegria e momentos especiais para todas as idades. Nosso espaço é ideal para festas temáticas, brincadeiras interativas e atividades criativas, garantindo que a diversão esteja sempre presente!
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
