--- a/telas_finais/telas_oficinas/catavento.html
+++ b/telas_finais/telas_oficinas/catavento.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Catavento</h1>
+                <h1 class="text-center pt-5">Catavento</h1>
                 <p class="text-center">Durante a oficina, as crianças terão a oportunidade de aprender sobre o funcionamento dos cataventos, explorando conceitos de aerodinâmica e energia eólica de forma lúdica e interativa. Com materiais simples e muita criatividade, os participantes poderão construir seu próprio cata-vento e experimentar a sensação de ver a força do vento transformada em movimento.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
