--- a/telas_finais/telas_oficinas/culinaria.html
+++ b/telas_finais/telas_oficinas/culinaria.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Culinária</h1>
+                <h1 class="text-center pt-5">Culinária</h1>
                 <p class="text-center">Elas poderão experimentar pratos deliciosos e se aventurar na cozinha de forma segura e divertida. Com ingredientes coloridos e instruções simples, cada receita foi cuidadosamente planejada para estimular a criatividade e despertar o interesse dos pequenos pela culinária. Cozinhar pode ser uma atividade educativa e prazerosa para as crianças, proporcionando momentos especiais em família e criando memórias afetuosas que serão lembradas com carinho no futuro.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
