--- a/telas_finais/telas_oficinas/slime.html
+++ b/telas_finais/telas_oficinas/slime.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Slime</h1>
+                <h1 class="text-center pt-5">Slime</h1>
                 <p class="text-center">A criatividade e diversão se encontram. Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
