--- a/telas_finais/telas_eventos_corporativos/robotica.html
+++ b/telas_finais/telas_eventos_corporativos/robotica.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Robótica</h1>
+                <h1 class="text-center pt-5">Robótica</h1>
                 <p>O projeto STEAM visa unir conhecimentos de quatro áreas (ciências, tecnologia, engenharia, artes e matemática) em torno da construção ou automatização de algo que resolva o problema proposto. Kits de robótica, projetos "do it yourself" e arduinos fazem desse novo projeto algo dinâmico e inovador para os colaboradores
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
