--- a/telas_finais/telas_eventos_corporativos/teatro.html
+++ b/telas_finais/telas_eventos_corporativos/teatro.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center">Teatro</h1>
+                <h1 class="text-center pt-5">Teatro</h1>
                 <p class="text-center">Ferramenta criativa e interativa utilizada para melhorar a comunicação, o trabalho em equipe, e o desenvolvimento pessoal dos colaboradores. Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia. 
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
