--- a/telas_finais/galeria.html
+++ b/telas_finais/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Fotos e Área Admin</title>
+    <title>Galeria de Fotos</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/galeria.css">
@@ -38,7 +38,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
                             <li class="nav-item  navegacao_item">
-                                <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
+                                <a class="nav-link  navegacao_link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
@@ -50,7 +50,7 @@
                                 <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                                <a class="nav-link navegacao_link active" href="galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
