--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -304,6 +304,8 @@
                         <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/teatro.html">Saiba Mais</a>
                       </div>
                   </section>
+                  <div class="divisoria"></div>
+
                 </article>
               </div>
           </div>
