Ajuste nas fontes

--- a/telas_finais/telas_eventos_corporativos/game2030.html
+++ b/telas_finais/telas_eventos_corporativos/game2030.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Game 2030</h1>
+                <h1 class="text-center p-5">Game 2030</h1>
                 <p class="text-center">Um jogo inovador desenvolvido especialmente para o ambiente empresarial. Um game lúdico com uma potente ferramenta de aprendizagem que alinha o entretenimento com a educação corporativa sobre os Objetivos de Desenvolvimento Sustentável (ODS) da Agenda 2030 da ONU. Os participantes separados por equipes são desafiados a pensar criticamente e a agir de maneira colaborativa, enfrentando problemas reais e encontrando soluções sustentáveis na visão de uma empresa. A proposta pode ser customizada com informações, dados, metas atingidas que sua empresa obteve em relação aos compromissos dos ODS assumidos. Este treinamento pode ser reportado ao COP (Relatório do Pacto Global).
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
