--- a/telas_finais/telas_eventos_corporativos/kids_day.html
+++ b/telas_finais/telas_eventos_corporativos/kids_day.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Kids Day</h1>
+                <h1 class="text-center p-5">Kids Day</h1>
                 <p class="text-center">Um evento anual para celebrar o dia das crianças na sua empresa onde realizamos uma programação especial para os filhos dos colaboradores. O Programa é uma ação que aproxima a família do ambiente de trabalho, sendo estabelecido um dia para que os profissionais possam levar seus filhos à empresa. Oficinas culturais e ambientais, esquetes teatrais sobre um dia de trabalho fazem parte deste programa.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
