--- a/telas_finais/telas_eventos_corporativos/scape_room.html
+++ b/telas_finais/telas_eventos_corporativos/scape_room.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Scape Room</h1>
+                <h1 class="text-center p-5">Scape Room</h1>
                 <p class="text-center">O "Scape Room" é uma atividade estratégica e engajadora que visa fortalecer as habilidades da equipe, promover o trabalho em conjunto e desenvolver a resolução de problemas de maneira colaborativa.Os participantes são desafiados a resolver enigmas e superar obstáculos dentro de um ambiente temático, simulando situações complexas. Ao participar do Escape Room, os colaboradores têm a oportunidade de aprimorar competências, além disso, a natureza desafiadora da atividade estimula a criatividade e a resiliência, elementos cruciais para o sucesso em um ambiente empresarial dinâmico. O Scape Room Corporativo emerge como uma ferramenta valiosa para aprimorar o desempenho e fortalecer o espírito colaborativo dentro da organização.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
