--- a/telas_finais/telas_oficinas/robotica2.html
+++ b/telas_finais/telas_oficinas/robotica2.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Robótica</h1>
+                <h1 class="text-center p-5">Robótica</h1>
                 <p class="text-center">Os participantes são encorajados a criar um carrinho controlado por Bluetooth, com a orientação da nossa equipe, para colaborar na construção de forma criativa. Essa atividade não apenas proporciona aprendizado prático em engenharia e tecnologia, mas também fomenta um ambiente de competição saudável e o orgulho de ver o fruto do esforço em equipe.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
