--- a/telas_finais/telas_eventos_sociais/programacao_ferias.html
+++ b/telas_finais/telas_eventos_sociais/programacao_ferias.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Programação férias</h1>
+                <h1 class="text-center p-5">Programação férias</h1>
                 <p class="text-center">Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
