--- a/telas_finais/telas_eventos_sociais/recreacao.html
+++ b/telas_finais/telas_eventos_sociais/recreacao.html
@@ -128,7 +128,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Recreação</h1>
+                <h1 class="text-center p-5">Recreação</h1>
                 <p class="text-center">Nossos serviços de recreação são altamente detalhados e personalizados para atender às necessidades de cada faixa etária. Desenvolvemos jogos, dinâmicas e atividades sob medida para o público do seu evento. Além disso, contamos com uma equipe de recreadores treinados e apaixonados por proporcionar momentos de diversão e aprendizado para todas as idades. Nosso objetivo é garantir que cada participante se sinta acolhido e envolvido em experiências únicas e inesquecíveis.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
