--- a/telas_finais/telas_oficinas/batalha_nerf.html
+++ b/telas_finais/telas_oficinas/batalha_nerf.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5 ">
-                <h1 class="text-center pt-5">Batalha nerf</h1>
+                <h1 class="text-center p-5">Batalha nerf</h1>
                 <p class="text-center">Promover a diversão, o exercício físico, o trabalho em equipe, e o desenvolvimento de habilidades estratégicas e motoras, utilizando as pistolas Nerf em jogos organizados e seguros. Cenário de campo de batalha, equipamentos e regras de segurança.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
