--- a/telas_finais/telas_oficinas/bolhas_gigantes.html
+++ b/telas_finais/telas_oficinas/bolhas_gigantes.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Bolhas Gigantes</h1>
+                <h1 class="text-center p-5">Bolhas Gigantes</h1>
                 <p class="text-center">Criar bolhas gigantes é uma atividade que encanta pessoas de todas as idades. A mistura perfeita de água, detergente e um toque de mágica transforma simples bolhas de sabão em verdadeiras obras de arte flutuantes. Imagine o brilho nos olhos das crianças ao verem bolhas enormes pairando no ar, refletindo as cores do arco-íris. É um momento de diversão e admiração que ficará gravado na memória de todos os participantes. Deixe a imaginação fluir e embarque nessa jornada de encanto e magia com a nossa oficina de bolhas gigantes.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
