--- a/telas_finais/telas_oficinas/pintura_tela.html
+++ b/telas_finais/telas_oficinas/pintura_tela.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Pintura em Tela</h1>
+                <h1 class="text-center p-5">Pintura em Tela</h1>
                 <p class="text-center">Nossa oficina de pintura é um espaço acolhedor e inspirador, onde a criatividade é sempre bem-vinda. Aqui, os artistas podem explorar diferentes técnicas e estilos para dar vida às suas ideias e emoções. Os cavaletes proporcionam a base perfeita para a tela, permitindo que cada pincelada conte uma história única. Cada item na nossa oficina é um convite para a expressão artística e a celebração da beleza que está presente em cada traço e cor. Junte-se a nós e deixe sua imaginação voar, transformando simples tintas em verdadeiras obras de arte.
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
