--- a/telas_finais/telas_oficinas/terrario.html
+++ b/telas_finais/telas_oficinas/terrario.html
@@ -129,7 +129,7 @@
         </div>
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
-                <h1 class="text-center pt-5">Terrario</h1>
+                <h1 class="text-center p-5">Terrario</h1>
                 <p class="text-center">Você e seus pequenos poderão se divertir juntos enquanto aprendem a cuidar de plantas e criam um ambiente único e especial. Nossa oficina de terrários é uma oportunidade perfeita para estimular a criatividade, promover a conexão com a natureza e fortalecer os laços familiares. Venha se encantar com essa experiência enriquecedora e cheia de cores!
                 </p>
                 <h3 class="text-center">Quer saber mais?</h3>
