--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -212,7 +212,7 @@
     <br>
     <br>
     <br>
-    <button class="btn btn-outline-success w-100 " id="botaoCadastro" onclick="salvarMudancas()">Salvar Mudanças</button>
+    <button class="btn btn-outline-success w-100 d-none" id="botaoCadastro" onclick="salvarMudancas()">Salvar Mudanças</button>
     <br>
     <br>
     <br>
