ajuste em fonte

--- a/telas_finais/telas_eventos_corporativos/community_day.html
+++ b/telas_finais/telas_eventos_corporativos/community_day.html
@@ -131,7 +131,7 @@
                 <h1 class="text-center p-5">Community Day</h1>
                 <p class="text-center">Uma iniciativa que incentiva os colaboradores de uma empresa a se engajarem em ações sociais em benefício da comunidade. Durante esse dia, as empresas mobilizam seus funcionários para participarem de atividades voluntárias, promovendo impacto positivo na sociedade, fortalecendo laços entre os colaboradores e alinhando a missão da empresa com práticas de responsabilidade social. O Community Day é uma oportunidade para os colaboradores experimentarem o trabalho voluntário, vivenciarem novas experiências e reforçarem o espírito de equipe, contribuindo para o bem-estar social e ambiental da comunidade.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
                     <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
