--- a/telas_finais/telas_eventos_corporativos/sipat.html
+++ b/telas_finais/telas_eventos_corporativos/sipat.html
@@ -131,7 +131,7 @@
                 <h1 class="text-center p-5">Sipat</h1>
                 <p class="text-center">Focado na conscientização dos colaboradores sobre a importância da saúde e segurança no ambiente de trabalho, a SIPAT envolve uma série de atividades como palestras, workshops, dinâmicas, treinamentos práticos, e apresentações sobre prevenção de acidentes, ergonomia, saúde mental, primeiros socorros, e bem-estar geral. O objetivo é promover um ambiente de trabalho seguro e saudável, incentivando a cultura da prevenção e do cuidado entre todos os colaboradores.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
