--- a/telas_finais/telas_eventos_sociais/recreacao.html
+++ b/telas_finais/telas_eventos_sociais/recreacao.html
@@ -131,7 +131,7 @@
                 <h1 class="text-center p-5">Recreação</h1>
                 <p class="text-center">Nossos serviços de recreação são altamente detalhados e personalizados para atender às necessidades de cada faixa etária. Desenvolvemos jogos, dinâmicas e atividades sob medida para o público do seu evento. Além disso, contamos com uma equipe de recreadores treinados e apaixonados por proporcionar momentos de diversão e aprendizado para todas as idades. Nosso objetivo é garantir que cada participante se sinta acolhido e envolvido em experiências únicas e inesquecíveis.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
                     <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
