--- a/telas_finais/telas_oficinas/pulseira_macrame.html
+++ b/telas_finais/telas_oficinas/pulseira_macrame.html
@@ -132,7 +132,7 @@
                 <h1 class="text-center p-5">Pulseira Macrame</h1>
                 <p class="text-center">Com diferentes cores de lã e um molde, podemos dar vida a uma pulseira única e cheia de significado. As crianças vão se encantar com a ideia de poder presentear um amigo com algo feito por elas mesmas, repleto de carinho e dedicação. Além de estimular a criatividade, essa atividade promove a amizade e fortalece os laços entre os pequenos. Juntos, eles vão se divertir criando algo especial que certamente será valorizado e apreciado pelo amigo presenteado.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
