--- a/telas_finais/telas_oficinas/slime.html
+++ b/telas_finais/telas_oficinas/slime.html
@@ -132,7 +132,7 @@
                 <h1 class="text-center p-5">Slime</h1>
                 <p class="text-center">A criatividade e diversão se encontram. Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
