--- a/telas_finais/telas_eventos_corporativos/teatro.html
+++ b/telas_finais/telas_eventos_corporativos/teatro.html
@@ -131,7 +131,7 @@
                 <h1 class="text-center p-5">Teatro</h1>
                 <p class="text-center">Ferramenta criativa e interativa utilizada para melhorar a comunicação, o trabalho em equipe, e o desenvolvimento pessoal dos colaboradores. Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia. 
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
