--- a/telas_finais/telas_eventos_sociais/programacao_ferias.html
+++ b/telas_finais/telas_eventos_sociais/programacao_ferias.html
@@ -131,7 +131,7 @@
                 <h1 class="text-center p-5">Programação férias</h1>
                 <p class="text-center">Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.
                 </p>
-                <h3 class="text-center">Quer saber mais?</h3>
+                <h3 class="text-center p-3">Quer saber mais?</h3>
                 <h4 class="text-center">Entre em contato com agente</h4>
                 <div class="text-center">
                     <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
