mudança oficinas.js

--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -167,7 +167,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto6"></p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer Oficinas</a>
+                        <a href="oficinas.html" class="btn btn-secondary botao_card w-100">Conhecer Oficinas</a>
                     </div>
                 </div>
             </div>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto8"></p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer Eventos</a>
+                        <a href="eventos.html" class="btn btn-secondary botao_card w-100">Conhecer Eventos</a>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text" id="texto10"></p>
-                        <a href="#" class="btn btn-secondary botao_card w-100">Conhecer  Saúde</a>
+                        <a href="saude.html" class="btn btn-secondary botao_card w-100">Conhecer  Saúde</a>
                     </div>
                 </div>
             </div>
