--- a/telas_finais/tela_teste_ofc.html
+++ b/telas_finais/tela_teste_ofc.html
@@ -26,7 +26,217 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
-    <style></style>
+    <style>
+        body{
+    background-color: #FFBD57  !important;
+  }
+  
+  .titulo_cabecalho{
+    font-family:"Luckiest Guy", sans-serif;
+    font-size: 70px;
+    color: black;
+  
+  }
+  .row_descricao{
+  /* background-color: #3E4096 !important; */
+  padding: 0 !important;
+  
+  }
+  .texto_descricao{
+  font-family: 'Ubuntu', sans-serif !important;
+  font-size: 1.2rem;
+  color: black !important;
+  font-weight: 430;
+  letter-spacing: 1px;
+  }
+
+
+a.botao_oficinas{
+    margin: 40px !important;
+    padding: 15px !important;
+    font-family: 'Ubuntu', sans-serif !important;
+    border:2px solid #3e4096;
+    background-color: #3e4096;
+    color: white !important;
+    width: 300px;
+    font-size: 20px;
+    box-shadow: 0px 0px 15px -3px #117;
+
+}
+a.botao_oficinas:hover{
+    background-color: #343579;
+    border:2px solid #343579;
+    transform: scale(1.1);
+
+}
+
+
+.card {
+    margin: 0 0.5em!important;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18)!important;
+    border: none!important;
+    background-color: white!important;
+    text-align: center!important;
+    border-radius: 20px!important;
+    }
+  
+    .card-title{
+        font-family:"Luckiest Guy", sans-serif!important;
+        font-size: 2rem!important;
+        color: black!important;
+        margin: 25px 0!important;
+  
+    }
+    .card-text{
+        font-family: 'Ubuntu', sans-serif !important;
+        font-size: 1.2rem!important;
+        color: black!important;
+        margin: 20px!important;
+  
+    }
+  
+      .carousel-control-prev,
+      .carousel-control-next {
+      background-color: #3E4096!important;
+      width: 6vh!important;
+      height: 6vh!important;
+      border-radius: 30px!important;
+      top: 50%!important;
+      transform: translateY(-50%)!important;
+      }
+  
+  
+    .carousel-item{
+        width: 100% !important;
+    }
+  
+    @media (min-width: 992px) {
+    .carousel-item {
+        margin-right: 0!important;
+        flex: 0 0 33.333333%!important;
+        display: block!important;
+    }
+    .carousel-inner {
+        display: flex!important;
+    }
+    }
+  
+    /* .card .img-wrapper {
+        max-width: 100%!important;
+        height: 20em!important;
+        display: flex!important;
+        justify-content: center!important;
+        align-items: center !important;
+    } */
+    /* .img-wrapper img{
+        max-width: 100% !important; 
+        max-height: 100% !important; 
+        height: auto !important; 
+        width: auto !important;       
+    } */
+     
+  
+    /* @media (max-width: 767px) {
+    .card .img-wrapper {
+        height: 17em !important;
+    }
+    } */
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    /* ysejfhjksadhf */
+  
+  
+    .card-body{
+      padding: 0 !important;
+    }
+  
+    .img_card{
+      max-width: 100% !important; 
+      max-height: 400px !important; 
+      min-height: 400px !important;
+      height: auto !important; 
+      object-fit: cover !important;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+  
+
+  
+
+  
+  .h-divider {
+    margin: auto;
+    margin-top: 80px;
+    width: 40% !important;
+    position: relative;
+  }
+  
+  .h-divider .shadow {
+    overflow: hidden;
+    height: 5px;
+  }
+  
+  .h-divider .shadow:after {
+    content: '';
+    display: block;
+    margin: -25px auto 0;
+    width: 100%;
+    height: 25px;
+    border-radius: 125px/12px;
+    box-shadow: 8px 8px 8px #3e4096;
+  }
+  
+  
+  .h-divider .divisor_img {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    bottom: 100%;
+    margin-bottom: -35px;
+    left: 50%;
+    margin-left: -25px;
+    border-radius: 100%;
+  }
+  
+  .h-divider img {
+    position: absolute;
+    margin: 4px;
+    max-width: 100px;
+    border-radius: 100%;
+    left: -30%;
+    top: -20%;
+
+  }
+
+
+  a.botao_oficina{
+    margin: 40px !important;
+    padding: 8px !important;
+    font-family: 'Ubuntu', sans-serif !important;
+    border:2px solid #3e4096;
+    background-color: #3e4096;
+    color: white !important;
+    width: 200px;
+    font-size: 20px;
+    box-shadow: 0px 0px 15px -3px #117;
+
+}
+a.botao_oficina:hover{
+    background-color: #343579;
+    border:2px solid #343579;
+    transform: scale(1.1);
+
+}
+    </style>
 </head>
 
 <body onload="obterDados()">
