--- a/telas_finais/home.html
+++ b/telas_finais/home.html
@@ -221,14 +221,13 @@
 
   
 
-    <!-- footer -->
     <footer class="fixed">
         <div class="container-fluid rodape">
             <div class="row justify-content-around align-items-center row_rodape g-3">
                 <!-- col com botao contate -->
 
                 <div class="col-10 col-sm-8 col-md-5 col-lg-3 div_contate">
-                    <a class="btn botao_contate_footer w-100" href="../contato.html">
+                    <a class="btn botao_contate_footer w-100" href="contato.html">
                         <div class="texto-botao">Contate-nos</div>
                     </a>
                 </div>
