--- a/telas_finais/galeria.html
+++ b/telas_finais/galeria.html
@@ -84,8 +84,8 @@
     <br>
     <br>
     <div class="tabs">
-        <div class="tab active" onclick="showGallery('todos')">Todas as Fotos</div>
-        <div class="tab" onclick="showGallery('ofinas')">Oficinas</div>
+        <div class="tab active" onclick="showGallery('all')">Todas as Fotos</div>
+        <div class="tab" onclick="showGallery('oficinas')">Oficinas</div>
         <div class="tab" onclick="showGallery('eventos')">Eventos</div>
         <div class="tab" onclick="showGallery('saude')">Saúde e Bem-estar</div>
     </div>
@@ -103,8 +103,6 @@
         <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="Foto 3" class="all saude" onclick="openModal(this.src)">
         <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="Foto 3" class="all saude" onclick="openModal(this.src)">
         <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
-        <img src="image/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
-        <img src="image/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
         <img src="image/coloque_imagem.PNG" alt="Foto 4" class="all oficinas" onclick="openModal(this.src)">
 
 
