--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -103,7 +103,7 @@
     <section id="contato_forms">
         <div class="text-center">
             <h2>Entre em Contato</h2>
-            <p class="form">Quer saber mais? Preencha o formulário para que possamos entrar em contato</p>
+            <p class="form">Quer saber mais? Preencha o formulário para entrarmos em contato</p>
         </div>
         <section id="=contato_midias">
             <div class="container-fluid contato_midia">
@@ -213,7 +213,7 @@
                 </form>
             </div>
         </div>
-
+        <br><br><br><br>
         <footer class="fixed">
             <div class="container-fluid rodape">
                 <div class="row justify-content-around align-items-center row_rodape g-3">
